--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="bmstable" content="header.json" />
+    <meta name="bmstable" content="main/header.json" />
     <link
       rel="stylesheet"
       href="https://fonts.xz.style/serve/inter.css"
