--- a/table.html
+++ b/table.html
@@ -35,10 +35,12 @@
       BMS difficulty table for bms patterns made by Seori (a.k.a. Rain's Avenue) and Kazato as 妖夢.
     </p>
     <hr />
-    <!-- <details>
+    <details>
+      <!--
       <summary>Changelog</summary>
       <textarea name="changelogText" id="changelogText" readonly></textarea>
-    </details> -->
+      -->
+    </details>
     <div class="tableframe">
       <table id="tableDiff" class="display compact"></table>
     </div>
