--- a/table.html
+++ b/table.html
@@ -32,7 +32,7 @@
     <!-- Main Contents -->
     <h2>Seori & 妖夢 BMS Difficulty Table</h2>
     <p>
-      BMS difficulty table for bms patterns made by Seori (a.k.a. Rain's Avenue) and Kazato as 妖夢.
+      BMS difficulty table for bms patterns made by Seori (a.k.a. Rain's Avenue) and Kazato (as 妖夢).
     </p>
     <hr />
     <details>
