--- a/table.html
+++ b/table.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Seori & 妖夢 Difficulty Table</title>
+    <title>Seori & 妖夢 Chart Table</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -30,9 +30,9 @@
     <header data-include-html="assets/components/header.html"></header>
 
     <!-- Main Contents -->
-    <h2>Seori & 妖夢 BMS Difficulty Table</h2>
+    <h2>Seori & 妖夢 Chart Table</h2>
     <p>
-      BMS difficulty table for bms patterns made by Seori (a.k.a. Rain's Avenue) and Kazato (as 妖夢).
+      This page is an archive for bms patterns made by Seori (a.k.a. Rain's Avenue) and Kazato (as 妖夢).
     </p>
     <hr />
     <details>
